--- a/Haraj_app/onclickVC/DetailTableViewCell.xib
+++ b/Haraj_app/onclickVC/DetailTableViewCell.xib
@@ -39,7 +39,7 @@
                         <color key="textColor" red="0.0" green="0.56470588239999997" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="steve.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="MvA-OU-4ZI">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="defaultimg.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="MvA-OU-4ZI">
                         <frame key="frameInset" minX="308" minY="9" width="54" height="54"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
@@ -192,6 +192,6 @@
         <image name="Favourite" width="25" height="25"/>
         <image name="HighestPrice" width="29" height="29"/>
         <image name="Location_on" width="19" height="26"/>
-        <image name="steve.jpeg" width="660" height="371"/>
+        <image name="defaultimg.jpg" width="200" height="200"/>
     </resources>
 </document>
