--- a/Haraj_app/onclickVC/TwoImageOnClickTableViewCell.xib
+++ b/Haraj_app/onclickVC/TwoImageOnClickTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -76,7 +76,6 @@
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gmM-Z7-AAE">
                         <frame key="frameInset" minX="80" minY="8" width="50" height="42"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <state key="normal" image="Whitefavourite"/>
                     </button>
                 </subviews>
             </tableViewCellContentView>
@@ -99,6 +98,5 @@
         <image name="Moreimages" width="19" height="19"/>
         <image name="Play" width="88" height="88"/>
         <image name="Whitearrow" width="28" height="25"/>
-        <image name="Whitefavourite" width="25" height="25"/>
     </resources>
 </document>
